Created alerts for correct and incorrect answers.

--- a/stateCapitalsQuiz/Base.lproj/Main.storyboard
+++ b/stateCapitalsQuiz/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmO-hn-ECk">
                                         <rect key="frame" x="0.0" y="601" width="343" height="30"/>
                                         <state key="normal" title="Final Answer"/>
+                                        <connections>
+                                            <action selector="submitButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gw9-5C-20H"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
