Added score counter and more flashcards.

--- a/stateCapitalsQuiz/Base.lproj/Main.storyboard
+++ b/stateCapitalsQuiz/Base.lproj/Main.storyboard
@@ -26,13 +26,19 @@
                                 <rect key="frame" x="16" y="28" width="343" height="631"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Question" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JkV-uN-iTW">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="31.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="42"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x5J-pF-vy2">
+                                        <rect key="frame" x="0.0" y="42" width="343" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" red="0.9739961899304922" green="0.99558604324446653" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Question's Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="934-Dd-mOX">
-                                        <rect key="frame" x="0.0" y="31.5" width="343" height="323"/>
+                                        <rect key="frame" x="0.0" y="71" width="343" height="283.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -72,6 +78,7 @@
                         <outlet property="answerPickerView" destination="8A2-xt-LeF" id="bDF-2n-4L3"/>
                         <outlet property="questionLabel" destination="JkV-uN-iTW" id="X1V-A6-fgX"/>
                         <outlet property="questionTextView" destination="934-Dd-mOX" id="opn-4J-CfV"/>
+                        <outlet property="scoreLabel" destination="x5J-pF-vy2" id="PXg-20-ncG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
